--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -1,5 +1,4 @@
 name: Deploy to Azure SQL Database
-
 on:
   push:
     branches:
@@ -70,7 +69,7 @@ jobs:
            dacpac-package: 'AdventureWorks2012.dacpac'
 
   DeploySQLDBToPrd:
-    needs: DeploySQLDBToDev
+    needs: build
     runs-on: windows-latest
     environment: DeploySQLDB
     if: success() && github.ref == 'refs/heads/prod'
