--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -18,7 +18,7 @@ permissions:
 jobs:
 
   build:
-    runs-on: windows-latest
+    runs-on: self-hosted
     steps:
     - uses: actions/checkout@v2
 
@@ -36,7 +36,7 @@ jobs:
          path: ${{ github.workspace }}/AdventureWorks2012/bin/Release/
 
   DeploySQLDBToDev:
-    runs-on: windows-latest
+    runs-on: self-hosted
     needs: build
     if: success() && github.ref == 'refs/heads/preprod'
     # if: github.event.ref == 'refs/heads/test' && success()
@@ -71,7 +71,7 @@ jobs:
 
   DeploySQLDBToPrd:
     needs: DeploySQLDBToDev
-    runs-on: windows-latest
+    runs-on: self-hosted
     environment: DeploySQLDB
     if: success() && github.ref == 'refs/heads/prod'
     
