--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -21,8 +21,8 @@ jobs:
     steps:
     - uses: actions/checkout@v2
 
-    # - name: Setup msbuild PATH
-    #   uses: microsoft/setup-msbuild@v1.0.2
+    - name: Setup msbuild PATH
+      uses: microsoft/setup-msbuild@v1.0.2
     
     # - name: Set up .NET SDK
     #   uses: actions/setup-dotnet@v2
