--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -1,4 +1,5 @@
 name: Deploy to Azure SQL Database
+
 on:
   push:
     branches:
@@ -57,8 +58,8 @@ jobs:
   #   steps:
   #   - uses: actions/checkout@v2
         
-    - name: Setup MSBuild
-      uses: microsoft/setup-msbuild@v1.0.2
+    # - name: Setup MSBuild
+    #   uses: microsoft/setup-msbuild@v1.0.2
       
     - name: Build Database project
       run: |
