--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -24,6 +24,7 @@ jobs:
     - name: Setup MSBuild
       uses: microsoft/setup-msbuild@v1.0.2
       
+        
     - name: Build Database project
       run: |
         # cd AdventureWorks2012
@@ -89,9 +90,16 @@ jobs:
            secrets: |
             connectionStrin
 
-       - name: Deploy DACPAC to Azure SQL Database
+       - name: Install sqlpackage
          run: |
-          sqlpackage /Action:Publish /SourceFile:AdventureWorks2012/bin/Debug/AdventureWorks2012.dacpac /TargetServerName:testserver003.database.windows.net /TargetDatabaseName:testdb /TargetEncryptConnection:True /TargetTrustServerCertificate:False /TargetAuthentication:ActiveDirectoryServicePrincipal /TenantId:${{ secrets.AZURE_TENANT_ID }} /ClientId:${{ secrets.AZURE_CLIENT_ID }} /ClientSecret:${{ secrets.AZURE_CLIENT_SECRET }}
+          Invoke-WebRequest -Uri https://aka.ms/sqlpackage -OutFile sqlpackage.zip
+          Expand-Archive -Path sqlpackage.zip -DestinationPath .\sqlpackage
+          $env:Path += ";$pwd\sqlpackage"
+
+       -  name: Deploy DACPAC to Azure SQL Database
+          run: |
+           sqlpackage /Action:Publish /SourceFile: SQLDB/AdventureWorks2012.dacpac /TargetServerName:testserver003.database.windows.net /TargetDatabaseName:testdb /TargetEncryptConnection:True /TargetTrustServerCertificate:False /TargetAuthentication:ActiveDirectoryServicePrincipal /TenantId:${{ secrets.AZURE_TENANT_ID }} /ClientId:${{ secrets.AZURE_CLIENT_ID }} /ClientSecret:${{ secrets.AZURE_CLIENT_SECRET }}
+
        # - name: Azure SQl deploy 
        #   uses: Azure/sql-action@v1.3
        #   with:
