--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -90,11 +90,11 @@ jobs:
            secrets: |
             connectionStrin
 
-       - name: Install sqlpackage
-         run: |
-          Invoke-WebRequest -Uri https://aka.ms/sqlpackage -OutFile sqlpackage.zip
-          Expand-Archive -Path sqlpackage.zip -DestinationPath .\sqlpackage
-          $env:Path += ";$pwd\sqlpackage"
+       # - name: Install sqlpackage
+       #   run: |
+       #    Invoke-WebRequest -Uri https://aka.ms/sqlpackage -OutFile sqlpackage.zip
+       #    Expand-Archive -Path sqlpackage.zip -DestinationPath .\sqlpackage
+       #    $env:Path += ";$pwd\sqlpackage"
 
        # -  name: Deploy DACPAC to Azure SQL Database
        #    run: |
