--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -106,7 +106,7 @@ jobs:
            server-name: testserver003.database.windows.net
            #connection-string: '${{ secrets.AZURE_SQL_CONNECTION_STRING }}'
            AuthenticationType: aadAuthenticationIntegrated
-           connection-string: ${{ steps.keyvault.outputs.connectionStrin }}
+           # connection-string: ${{ steps.keyvault.outputs.connectionStrin }}
            dacpac-package: 'AdventureWorks2012.dacpac'
 
   # DeploySQLDBToPrd:
