--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -95,6 +95,7 @@ jobs:
           Invoke-WebRequest -Uri https://aka.ms/sqlpackage -OutFile sqlpackage.zip
           Expand-Archive -Path sqlpackage.zip -DestinationPath .\sqlpackage
           $env:Path += ";$pwd\sqlpackage"
+         shell: pwsh
 
        - name: Deploy DACPAC to Azure SQL Database
          run: |
