--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -1,12 +1,12 @@
 name: Deploy to Azure SQL Database
 on:
-  push:
-    branches:
-       -  master
-       -  prod
-       -  preprod
-  # pull_request:
-  #   branches: [ master ]      
+  # push:
+  #   branches:
+  #      -  master
+  #      -  prod
+  #      -  preprod
+  pull_request:
+    branches: [ master ]      
 # Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
 permissions:
   contents: read
@@ -90,23 +90,16 @@ jobs:
            secrets: |
             connectionStrin
 
-       - name: Install sqlpackage
-         run: |
-          Invoke-WebRequest -Uri https://aka.ms/sqlpackage -OutFile sqlpackage.zip
-          Expand-Archive -Path sqlpackage.zip -DestinationPath .\sqlpackage
-          $env:Path += ";$pwd\sqlpackage"
-         shell: pwsh
+       # - name: Deploy DACPAC to Azure SQL Database
+       #   run: |
+       #    sqlpackage /Action:Publish /SourceFile:./dacpac/AdventureWorks2012.dacpac /TargetServerName:testserver003.database.windows.net /TargetDatabaseName:testdb /TargetEncryptConnection:True /TargetTrustServerCertificate:False /TargetAuthentication:ActiveDirectoryPassword /User:sqladmin@nairanil83gmail.onmicrosoft.com /Password:p@ssword@12345678
+       # # -  name: Deploy DACPAC to Azure SQL Database
+       # #    run: |
+       # #     sqlpackage /Action:Publish /SourceFile: SQLDB/AdventureWorks2012.dacpac /TargetServerName:testserver003.database.windows.net /TargetDatabaseName:testdb /TargetEncryptConnection:True /TargetTrustServerCertificate:False /TargetAuthentication:ActiveDirectoryServicePrincipal /TenantId:${{ secrets.AZURE_TENANT_ID }} /ClientId:${{ secrets.AZURE_CLIENT_ID }} /ClientSecret:${{ secrets.AZURE_CLIENT_SECRET }}
 
-       - name: Deploy DACPAC to Azure SQL Database
-         run: |
-          sqlpackage /Action:Publish /SourceFile:./dacpac/AdventureWorks2012.dacpac /TargetServerName:testserver003.database.windows.net /TargetDatabaseName:testdb /TargetEncryptConnection:True /TargetTrustServerCertificate:False /TargetAuthentication:ActiveDirectoryPassword /User:sqladmin@nairanil83gmail.onmicrosoft.com /Password:p@ssword@12345678
-       # -  name: Deploy DACPAC to Azure SQL Database
-       #    run: |
-       #     sqlpackage /Action:Publish /SourceFile: SQLDB/AdventureWorks2012.dacpac /TargetServerName:testserver003.database.windows.net /TargetDatabaseName:testdb /TargetEncryptConnection:True /TargetTrustServerCertificate:False /TargetAuthentication:ActiveDirectoryServicePrincipal /TenantId:${{ secrets.AZURE_TENANT_ID }} /ClientId:${{ secrets.AZURE_CLIENT_ID }} /ClientSecret:${{ secrets.AZURE_CLIENT_SECRET }}
-
-       - name: Add client IP to Azure SQL Server firewall
-         run: |
-          az sql server firewall-rule create --resource-group sql-rg001 --server testserver003 --name AllowGitHubActions --start-ip-address $(curl -s https://api.ipify.org) --end-ip-address $(curl -s https://api.ipify.org)
+       # - name: Add client IP to Azure SQL Server firewall
+       #   run: |
+       #    az sql server firewall-rule create --resource-group sql-rg001 --server testserver003 --name AllowGitHubActions --start-ip-address $(curl -s https://api.ipify.org) --end-ip-address $(curl -s https://api.ipify.org)
        
        - name: Azure SQl deploy 
          uses: Azure/sql-action@v1.3
