--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -1,13 +1,13 @@
 name: Deploy to Azure SQL Database
 on:
 
-  # push:
-  #   branches:
-  #      -  master
-  #      -  prod
-  #      -  preprod
-  pull_request:
-    branches: [ master ]      
+  push:
+    branches:
+       -  master
+       -  prod
+       -  preprod
+  # pull_request:
+  #   branches: [ master ]      
 # Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
 permissions:
   contents: read
@@ -73,15 +73,15 @@ jobs:
          with:
             name: SQLDB
 
-       - uses: azure/login@v1
-         with: 
-           creds: ${{ secrets.AZURE_CREDENTIALS }}
-           
        # - uses: azure/login@v1
-       #   with:
-       #    client-id: ${{ secrets.AZURE_CLIENT_ID }}
-       #    tenant-id: ${{ secrets.AZURE_TENANT_ID }}
-       #    subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+       #   with: 
+       #     creds: ${{ secrets.AZURE_CREDENTIALS }}
+           
+       - uses: azure/login@v1
+         with:
+          client-id: ${{ secrets.AZURE_CLIENT_ID }}
+          tenant-id: ${{ secrets.AZURE_TENANT_ID }}
+          subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
 
        - name: Fetch secrets from Azure Key Vault
          id: keyvault
