--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -76,7 +76,8 @@ jobs:
          with:
            server-name: testserver003.database.windows.net
            #connection-string: '${{ secrets.AZURE_SQL_CONNECTION_STRING }}'
-           connection-string: ${{ steps.keyvault.outputs.connectionStrin }}
+           # connection-string: ${{ steps.keyvault.outputs.connectionStrin }}
+           connection-string: "Server=tcp:testserver003.database.windows.net,1433;Initial Catalog=testdb;Persist Security Info=False;Authentication=Active Directory Managed Identity;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;"
            dacpac-package: 'AdventureWorks2012.dacpac'
 
   # DeploySQLDBToPrd:
