--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -29,12 +29,17 @@ jobs:
     - name: Build Database project
       run: |
         # cd AdventureWorks2012
-        msbuild.exe AdventureWorks2012.sln /p:Configuration=Release
+        msbuild.exe AdventureWorks2012.sln /p:Configuration=Release -o ${{ github.workspace }}/sql
 
     - uses: actions/upload-artifact@v3.0.0
       with:
          name: SQLDB
-         path: ${{ github.workspace }}/AdventureWorks2012/bin/Release/
+         path: ${{ github.workspace }}/sql
+         
+    # - uses: actions/upload-artifact@v3.0.0
+    #   with:
+    #      name: SQLDB
+    #      path: ${{ github.workspace }}/AdventureWorks2012/bin/Release/
 
   DeploySQLDBToDev:
     runs-on: windows-latest
