--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -28,7 +28,7 @@ jobs:
     - name: Build Database project
       run: |
         # cd AdventureWorks2012
-        msbuild.exe AdventureWorks2012.sln -o ${{github.workspace}}/myapp
+        msbuild.exe AdventureWorks2012.sln --output ${{github.workspace}}/myapp
       
     - uses: actions/upload-artifact@v3.0.0
       with:
