--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -25,27 +25,27 @@ jobs:
     - name: Setup MSBuild
       uses: microsoft/setup-msbuild@v1.0.2
 
-    - name: Build Database project
-      run: |
-        # cd AdventureWorks2012
-        msbuild.exe AdventureWorks2012.sln --output ${{github.workspace}}/myapp
-      
-    - uses: actions/upload-artifact@v3.0.0
-      with:
-         name: SQLDB
-         path: ${{ github.workspace }}/myapp      
-
-         
     # - name: Build Database project
     #   run: |
     #     # cd AdventureWorks2012
-    #     msbuild.exe AdventureWorks2012.sln /p:Configuration=Release
-
-         
+    #     msbuild.exe AdventureWorks2012.sln --output ${{github.workspace}}/myapp
+      
     # - uses: actions/upload-artifact@v3.0.0
     #   with:
     #      name: SQLDB
-    #      path: ${{ github.workspace }}/AdventureWorks2012/bin/Release/
+    #      path: ${{ github.workspace }}/myapp      
+
+         
+    - name: Build Database project
+      run: |
+        # cd AdventureWorks2012
+        msbuild.exe AdventureWorks2012.sln /p:Configuration=Release
+
+         
+    - uses: actions/upload-artifact@v3.0.0
+      with:
+         name: SQLDB
+         path: ${{ github.workspace }}/AdventureWorks2012/bin/Release/
 
   DeploySQLDBToDev:
     runs-on: windows-latest
