--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -68,11 +68,11 @@ jobs:
        #   with: 
        #     creds: ${{ secrets.AZURE_CREDENTIALS }}
            
-       # - uses: azure/login@v1
-       #   with:
-       #    client-id: ${{ secrets.AZURE_CLIENT_ID }}
-       #    tenant-id: ${{ secrets.AZURE_TENANT_ID }}
-       #    subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+       - uses: azure/login@v1
+         with:
+          client-id: ${{ secrets.AZURE_CLIENT_ID }}
+          tenant-id: ${{ secrets.AZURE_TENANT_ID }}
+          subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
 
        # - name: Fetch secrets from Azure Key Vault
        #   id: keyvault
