--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -86,10 +86,7 @@ jobs:
          uses: Azure/sql-action@v1.3
          with:
            server-name: testserver003.database.windows.net
-           authentication-type: 'aad-password'
-           aad-username: ${{ secrets.AAD_USERNAME }}
-           aad-password: ${{ secrets.AAD_PASSWORD }}
-           #connection-string: '${{ secrets.AZURE_SQL_CONNECTION_STRING }}'
+           connection-string: '${{ secrets.AZURE_SQL_CONNECTION_STRING }}'
           # connection-string: ${{ steps.keyvault.outputs.connectionStrin }}
            dacpac-package: 'AdventureWorks2012.dacpac'
 
