--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -85,8 +85,7 @@ jobs:
        - name: Azure SQl deploy 
          uses: Azure/sql-action@v1.3
          with:
-           server-name: testserver003.database.windows.net
-           connection-string: '${{ secrets.AZURE_SQL_CONNECTION_STRING }}'
+           connection-string: Server=tcp:testdbserver901.database.windows.net,1433;Initial Catalog=testdb;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;Authentication="Active Directory Default";
           # connection-string: ${{ steps.keyvault.outputs.connectionStrin }}
            dacpac-package: 'AdventureWorks2012.dacpac'
 
