--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -82,8 +82,8 @@ jobs:
        #     secrets: |
        #      connectionStrin
             
-       - name: Azure SQl deploy 
-         uses: Azure/sql-action@v1.3
+       - name: Azure SQl deploy-database
+         uses: azure/sql-action@v2.3
          with:
            connection-string: Server=tcp:testdbserver901.database.windows.net,1433;Initial Catalog=testdb;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;Authentication="Active Directory Default";
           # connection-string: ${{ steps.keyvault.outputs.connectionStrin }}
