--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -87,7 +87,8 @@ jobs:
          with:
            connection-string: Server=tcp:testdbserver901.database.windows.net,1433;Initial Catalog=testdb;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;Authentication="Active Directory Default";
           # connection-string: ${{ steps.keyvault.outputs.connectionStrin }}
-           dacpac-package: 'AdventureWorks2012.dacpac'
+           path: 'AdventureWorks2012.dacpac'
+           # dacpac-package: 'AdventureWorks2012.dacpac'
 
   # DeploySQLDBToPrd:
   #   runs-on: windows-latest
