--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -89,6 +89,7 @@ jobs:
            connection-string: Server=tcp:testdbserver901.database.windows.net,1433;Initial Catalog=testdb;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;Authentication="Active Directory Default";
           # connection-string: ${{ steps.keyvault.outputs.connectionStrin }}
            path: .SQLDB/AdventureWorks2012.dacpac
+           action: publish
            # dacpac-package: 'AdventureWorks2012.dacpac'
 
   # DeploySQLDBToPrd:
