--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -83,13 +83,13 @@ jobs:
        #     secrets: |
        #      connectionStrin
 
-       # - name: Stop Azure Function App
-       #   run: az functionapp stop --name testfnc001 --resource-group testfnc001_group  
+       - name: Stop Azure Function App
+         run: az functionapp stop --name testfnc001 --resource-group testfnc001_group  
 
        - name: Azure SQl deploy-database
          uses: azure/sql-action@v2.3
          with:
-           connection-string: Server=tcp:testsqlserver003.database.windows.net,1433;Initial Catalog=testdb;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;Authentication="Active Directory Default";
+           connection-string: Server=tcp:testserver0012.database.windows.net,1433;Initial Catalog=testdb;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;Authentication="Active Directory Default";
           # connection-string: ${{ steps.keyvault.outputs.connectionStrin }}
            path: .SQLDB/AdventureWorks2012.dacpac
            action: publish
