--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -16,7 +16,7 @@ permissions:
 
 jobs:
   build:
-    runs-on: self-hosted
+    runs-on: runner1
 
     steps:
     - name: Checkout repository
@@ -48,7 +48,7 @@ jobs:
          path: ${{ github.workspace }}/AdventureWorks2012/bin/Release/
 
   DeploySQLDBToDev:
-    runs-on: self-hosted
+    runs-on: runner1
     needs: build
     # if: success() && github.ref == 'refs/heads/preprod'
     # if: github.event.ref == 'refs/heads/test' && success()
