--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -51,7 +51,7 @@ jobs:
          uses: actions/download-artifact@v3.0.0
          with:
             name: SQLDB
-            
+            path: .SQLDB
   DeploySQLDBToUAT:
     runs-on: windows-latest
     needs: build
@@ -68,6 +68,7 @@ jobs:
          uses: actions/download-artifact@v3.0.0
          with:
             name: SQLDB
+            path: .SQLDB
 
        # - uses: azure/login@v1
        #   with: 
