--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -19,18 +19,20 @@ jobs:
 
   build:
     runs-on: windows-latest
+    
     steps:
-    - uses: actions/checkout@v2
-
-    - name: Setup msbuild PATH
+    - name: Checkout repository
+      uses: actions/checkout@v2
+      
+    - name: Setup MSBuild
       uses: microsoft/setup-msbuild@v1.0.2
 
     - name: Build Database project
       run: |
-        cd AdventureWorks2012
+        # cd AdventureWorks2012
         msbuild.exe AdventureWorks2012.sqlproj /p:Configuration=Release
 
-    - uses: actions/upload-artifact@v3.0.0
+    - uses: actions/upload-artifact@v4.0.0
       with:
          name: SQLDB
          path: ${{ github.workspace }}/AdventureWorks2012/bin/Release/
@@ -48,7 +50,7 @@ jobs:
 
     steps:
        - name: download artifact contaning dacpac
-         uses: actions/download-artifact@v3.0.0
+         uses: actions/download-artifact@v4.0.0
          with:
             name: SQLDB
             path: .SQLDB
@@ -65,7 +67,7 @@ jobs:
 
     steps:
        - name: download artifact contaning dacpac
-         uses: actions/download-artifact@v3.0.0
+         uses: actions/download-artifact@v4.0.0
          with:
             name: SQLDB
             path: .SQLDB
