--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -30,7 +30,7 @@ jobs:
     - name: Build Database project
       run: |
         # cd AdventureWorks2012
-        msbuild.exe AdventureWorks2012.sqlproj /p:Configuration=Release
+        msbuild.exe AdventureWorks2012.sln /p:Configuration=Release
 
     - uses: actions/upload-artifact@v4.0.0
       with:
