--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -16,7 +16,7 @@ permissions:
 
 jobs:
   build:
-    runs-on: runner1
+    runs-on: ubuntu-latest
 
     steps:
     - name: Checkout repository
@@ -48,7 +48,7 @@ jobs:
          path: ${{ github.workspace }}/AdventureWorks2012/bin/Release/
 
   DeploySQLDBToDev:
-    runs-on: runner1
+    runs-on: ubuntu-latest
     needs: build
     # if: success() && github.ref == 'refs/heads/preprod'
     # if: github.event.ref == 'refs/heads/test' && success()
@@ -90,7 +90,7 @@ jobs:
        - name: Azure SQl deploy-database
          uses: azure/sql-action@v2.3
          with:
-           connection-string: Server=tcp:testdbserver901.database.windows.net,1433;Initial Catalog=testdb;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;Authentication="Active Directory Default";
+           connection-string: Server=tcp:testserver0012.database.windows.net,1433;Initial Catalog=pcat;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;Authentication="Active Directory Default";
           # connection-string: ${{ steps.keyvault.outputs.connectionStrin }}
            path: .SQLDB/AdventureWorks2012.dacpac
            action: publish
