--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -48,7 +48,7 @@ jobs:
          path: ${{ github.workspace }}/AdventureWorks2012/bin/Release/
 
   DeploySQLDBToDev:
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
     needs: build
     # if: success() && github.ref == 'refs/heads/preprod'
     # if: github.event.ref == 'refs/heads/test' && success()
@@ -87,6 +87,14 @@ jobs:
        # - name: Stop Azure Function App
        #   run: az functionapp stop --name testfnc001 --resource-group testfnc001_group  
 
+       - name: Install sqlpackage on Ubuntu
+         run: |
+          wget https://aka.ms/sqlpackage-linux -O sqlpackage.zip
+          unzip sqlpackage.zip -d sqlpackage
+          chmod +x sqlpackage/sqlpackage
+          sudo mv sqlpackage /opt/sqlpackage
+          echo "/opt/sqlpackage" >> $GITHUB_PATH
+       
        - name: Azure SQl deploy-database
          uses: azure/sql-action@v2.3
          with:
