--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -68,7 +68,11 @@ jobs:
        # - uses: azure/login@v1
        #   with: 
        #     creds: ${{ secrets.AZURE_CREDENTIALS }}
-           
+
+       - name: Install Azure CLI
+         run: |
+           curl -sL https://aka.ms/InstallAzureCLIDeb | sudo bash      
+        
        - uses: azure/login@v1
          with:
           client-id: ${{ secrets.AZURE_CLIENT_ID }}
