--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -48,7 +48,7 @@ jobs:
          path: ${{ github.workspace }}/AdventureWorks2012/bin/Release/
 
   DeploySQLDBToDev:
-    runs-on: runner1
+    runs-on: ubuntu-latest
     needs: build
     # if: success() && github.ref == 'refs/heads/preprod'
     # if: github.event.ref == 'refs/heads/test' && success()
@@ -91,23 +91,41 @@ jobs:
        # - name: Stop Azure Function App
        #   run: az functionapp stop --name testfnc001 --resource-group testfnc001_group  
 
-       - name: Install sqlpackage on Ubuntu
+       # - name: Install sqlpackage on Ubuntu
+       #   run: |
+       #    wget https://aka.ms/sqlpackage-linux -O sqlpackage.zip
+       #    unzip sqlpackage.zip -d sqlpackage
+       #    chmod +x sqlpackage/sqlpackage
+       #    sudo mv sqlpackage /opt/sqlpackage
+       #    echo "/opt/sqlpackage" >> $GITHUB_PATH
+
+       - name: Get Azure AD Access Token
+         id: get-token
          run: |
-          wget https://aka.ms/sqlpackage-linux -O sqlpackage.zip
-          unzip sqlpackage.zip -d sqlpackage
-          chmod +x sqlpackage/sqlpackage
-          sudo mv sqlpackage /opt/sqlpackage
-          echo "/opt/sqlpackage" >> $GITHUB_PATH
-       
-       - name: Azure SQl deploy-database
-         uses: azure/sql-action@v2.3
-         with:
-           connection-string: Server=tcp:testserver0012.database.windows.net,1433;Initial Catalog=pcat;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;Authentication="Active Directory Default";
-          # connection-string: ${{ steps.keyvault.outputs.connectionStrin }}
-           path: .SQLDB/AdventureWorks2012.dacpac
-           action: publish
-           skip-firewall-check: true
-           # dacpac-package: 'AdventureWorks2012.dacpac'
+          ACCESS_TOKEN=$(az account get-access-token --resource https://database.windows.net/ --query accessToken -o tsv)
+          echo "ACCESS_TOKEN=$ACCESS_TOKEN" >> $GITHUB_ENV
+
+          sqlpackage /Action:Publish \
+          /SourceFile:".SQLDB/AdventureWorks2012.dacpac" \
+          /TargetServerName:"testserver0034.database.windows.net" \
+          /TargetDatabaseName:"testdb" \
+          /AccessToken:"$ACCESS_TOKEN
+          
+       # - name: Run SQL script using Azure AD token
+       #   run: |
+       #    sqlcmd -S ${{ secrets.SQL_SERVER_NAME }}.database.windows.net \
+       #           -d ${{ secrets.SQL_DATABASE_NAME }} \
+       #           -G -i ".SQLDB/path/to/your-script.sql"   
+ #################################################################################################################################      
+       # - name: Azure SQl deploy-database
+       #   uses: azure/sql-action@v2.3
+       #   with:
+       #     connection-string: Server=tcp:testserver0012.database.windows.net,1433;Initial Catalog=pcat;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;Authentication="Active Directory Default";
+       #    # connection-string: ${{ steps.keyvault.outputs.connectionStrin }}
+       #     path: .SQLDB/AdventureWorks2012.dacpac
+       #     action: publish
+       #     skip-firewall-check: true
+       #     # dacpac-package: 'AdventureWorks2012.dacpac'
 
        # - name: Azure SQL Deploy
        #   uses: Azure/sql-action@v2.2.1
