--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -69,9 +69,9 @@ jobs:
        #   with: 
        #     creds: ${{ secrets.AZURE_CREDENTIALS }}
 
-       - name: Install Azure CLI
-         run: |
-           curl -sL https://aka.ms/InstallAzureCLIDeb | sudo bash      
+       # - name: Install Azure CLI
+       #   run: |
+       #     curl -sL https://aka.ms/InstallAzureCLIDeb | sudo bash      
         
        - uses: azure/login@v1
          with:
